# epydemix

./: LICENSE  README.md  TODO  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  test.ipynb
Epydemix/: Basin.py  Epydemix.py  calibration.py  epimodel.py  plotting.py  population.py  test.ipynb  transition.py  utils.py
docs/: requirements.txt
docs/source/: 1_Model_Definition_and_Simulation.rst  api_reference.rst  conf.py  epydemix.calibration.rst  epydemix.model.rst  epydemix.rst  (+11 more)
epydemix/: __init__.py  abc_smc_utils.py  calibration.py  calibration_results.py  epimodel.py  metrics.py  population.py  transition.py  utils.py
epydemix_data/: README.md  contact_matrices_sources.csv  locations.csv
examples/: abc-smc_pseudo_code.txt  calibration.ipynb  covid19_example.ipynb  population.ipynb  simulation.ipynb  test.ipynb  test_calibration_results.pkl
tests/: __init__.py  test_placeholder.py
tutorials/: 1_Model_Definition_and_Simulation.ipynb  1_define_models.ipynb  2_Modeling_with_Population_Data.ipynb  3_Model_Calibration.ipynb  3_Modeling_Interventions.ipynb  4_Model_Calibration_part1.ipynb  5_Model_Calibration_part2.ipynb  6_Advanced_Modeling_Features.ipynb  7_Covid-19_Example.ipynb  7_Covid-19_Example_FULL.ipynb  Epydemix_Model_Definition_and_Simulation_Tutorial.ipynb  Epydemix_Modeling_with_Population_Data_Tutorial.ipynb  abc_smc.ipynb  comparison_mobility_model.ipynb  covid19_example.ipynb  parameters_dimension.ipynb  population.ipynb  pyabc_comparison.ipynb  simulation.ipynb  test.ipynb
tutorials_old/: calibration.ipynb  simulation.ipynb
validation/: compare_models.ipynb  compare_models_population.ipynb
(+6855 files in other folders)
